# qr-gen

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: decoder.rs  main.rs
