[package]
name = "qr-gen"
version = "0.1.1"
edition = "2024"

[dependencies]
# atty = "0.2.13"
clap = { version = "4.5.39", features = ["derive"] }
image = "0.25.6"
qrcodegen = "1.8.0"
quircs = "0.10.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "qr-gen"
path = "src/main.rs"

[[bin]]
name = "qr-dec"
path = "src/decoder.rs"
